<resources>
    <string name="app_name">CineMates20</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_dimenticata">Password Dimenticata?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="iscriviti">Iscriviti</string>
    <string name="conferma_password">Confirm password</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feed">Feed</string>
    <string name="title_user">User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notifiche">Notifiche</string>
    <string name="le_mie_recensioni">Le mie recensioni</string>
    <string name="le_mie_liste">Le mie liste</string>
    <string name="lista_amici">Lista amici</string>
    <string name="problemi_di_accesso">Problemi di accesso</string>
    <string name="inserisci_la_tua_mail_per_recuperare_la_tua_password">Inserisci la tua mail per recuperare la tua password</string>
    <string name="recupera_password">Recupera password</string>
    <string name="torna_indietro">Torna indietro</string>
    <string name="popolari">I più Popolari</string>
    <string name="search">Search</string>
    <string name="facebook_app_id">147432087401272</string>
    <string name="fb_login_protocol_scheme">fb147432087401272</string>
    <string name="oppure">Oppure</string>
    <string name="invia">Invia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ora_nelle_sale">Ora nelle sale</string>
    <string name="i_pi_votati">I più votati</string>
    <string name="mail_inviata">We have sent you a verification email, please check your mail to confirm your account to login.</string>
    <string name="non_verificato">The account is not verified. Check your mail.</string>
    <string name="credenziali_errate">Wrong email or password. Check them and try again.</string>
    <string name="instruction_mail">Password recovery instructions forwarded to your inbox successfully.</string>
    <string name="something_wrong">The recovery mail could not be sent </string>
    <string name="signup_failed">Authentication failed.</string>

    <string name="confirm_review">Are you sure you want to save this review?
    If you do, it will not be possible to modify it, delete it or write a new one for the same title </string>

    <string name="commenti_degli_amici">Commenti degli amici</string>
    <string name="scrivi_un_commento">Scrivi un commento</string>
    <string name="valuta_questa_recensione">Valuta questa recensione</string>
    <string name="visualizza_numero_reazioni">Visualizza numero reazioni</string>
    <string name="il_tuo_amico_pensa_che">Il tuo amico pensa che:</string>
    <string name="ultimo_passaggio">Un ultimo passaggio!</string>
    <string name="completa_accesso_username">Inserisci un username per completare l\'accesso:</string>
    <string name="accetta">accetta</string>
    <string name="rifiuta">rifiuta</string>
    <string name="nomeutente">nomeUtente</string>
    <string name="time">Time</string>
    <string name="menu">Menu</string>
    <string name="logout">Logout</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="confirm_valuation">Are you sure you want to save this valuation?
        If you do, it will not be possible to modify it, delete it or write a new one for the same title</string>
    <string-array name="options">
        <item>Le mie recensioni</item>
        <item>Lista Amici</item>
        <item>Logout</item>
    </string-array>
</resources>