<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_baseline_rss_feed_24"
        android:title="@string/title_feed"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_baseline_notifications_black_24"
        android:title="@string/notifiche"/>

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/menu"/>

</menu>